- Add an upgrade step to fix broken-by-broken-protocol-excerpt journal entries on dossiers. [Rotonen]
- Do not list documents within dossiertemplates when creating a document from template. [njohner]
- Correct width of subdossier table in dossier details pdf. [njohner]
- Do not set document date during check-in or cancel. [njohner]
- Add Activity settings for Dispositions. [njohner]
- Disallow grouping tasks by the checkbox column in list views. [Rotonen]
- Add feature to generate a task listing pdf when resolving a dossier. [njohner]
- Set adhoc agendaitem filename to title without prefixing it. [njohner]
- Disallow dossier from template when adding businesscasedossier is disallowed. [njohner]
- Change wording for "Return Excerpt" from "zurücksenden" to "ablegen". [njohner]
- Add modification and creation date column to document listings. [njohner]
- Disallow replacing the file on proposal documents with a non-.docx file. [Rotonen]
- Disallow removing the file from proposal documents. [Rotonen]
- Bump lxml to 4.1.1. [Rotonen]
- Add REST API endpoint for livesearch. [maethu]


2018.4.7 (2018-10-05)
---------------------

- Revoke temporary roles also when closing direct-execution tasks. [phgross]


2018.4.6 (2018-10-01)
---------------------

- Fix bumblebee overlay link for not yet created initial version. [phgross]
- Only allow adding meeting templates, when meeting feature is enabled. [phgross]
- Ignore Tika exceptions during indexing in Solr. [buchi]


2018.4.5 (2018-09-24)
---------------------

- Fix task path queries for oracle backends. [phgross]
- Fix activity queries for oracle backends. [phgross]
- Split search terms at non-alphanumeric characters. [buchi]
- Bump Lucene version used in Solr to 7.3.1. [buchi]


2018.4.4 (2018-09-17)
---------------------

- Fix groubmembers overlay for groupids with spaces. [phgross]
- Add missing mimetype for wmf files. [phgross]
- Fix solr checked-in indexing problems. [phgross]